--- a/blog/2013-04-02-currying.markdown
+++ b/blog/2013-04-02-currying.markdown
@@ -1,4 +1,4 @@
-## 谈谈 Currying
+## Currying 的局限性
 
 很多基于 lambda calculus 的程序语言，比如 ML 和 Haskell，都习惯用一种叫做 currying 的手法来表示函数。比如，如果你在 Haskell 里面这样写一个函数：
 
