--- a/blog/2017-01-02-elitism.markdown
+++ b/blog/2017-01-02-elitism.markdown
@@ -1,21 +1,37 @@
 ## 精英主义的灭亡
 
-精英主义是一种精神疾病，是一种心理变态。得了这种病的人，有不同的轻重程度。程度轻的人，也许只是羡慕朋友考上了名牌大学。而程度重的人，最后可能成为反人类的战争罪犯。希特勒就是一个严重的精英主义者，他认为自己是精英，“劣等民族”的人都应该死。
+精英主义是一种精神疾病，是一种心理变态。得了这种病的人，有不同的轻重程度。程度轻的人，也许只是张口闭口的“名校”和“牛人”。而程度重的人，最后可能成为反人类的战争罪犯。希特勒就是一个严重的精英主义者，他认为自己是精英，“劣等民族”的人都应该死。
 
-这些所谓的精英，在智力上，体力上，学识上，人格上，都没有什么值得称道的地方。他们成为精英，往往是通过玩弄权术，舔人屁股。打着名牌大学的牌子，或者显示出几十亿的“身价”，或者挂上诺贝尔奖，[图灵奖](http://www.yinwang.org/blog-cn/2015/10/18/turing)等勋章，让人以为是天才，是杰出人物。而他们其实并没有什么特别。
+这些所谓的精英，在智力上，体力上，学识上，人格上，都没有什么值得称道的地方。他们被称为“精英”，往往是通过家族关系，或者舔人屁股，玩弄权术。还有些人，尽其所能包装自己，把自己跟名人或者富豪挂钩，写回忆录，请人给自己写传记，这样别人就以为他是天才，是杰出人物。而他们其实并没有什么特别，也许还不如一般人。
 
-精英们最在行的事情，其实是拉关系，互相吹捧，唱高调。他们在心理上是弱小的，他们必须依赖于名校或者大公司的牌子，依赖于校友的认可，依赖于那些身居高位的人的赞许和提拔。他们很多人不过是某些幕后黑手的木偶人而已。有句话说得好：宠为下，得知若惊，失之若惊。如果你需要身居高位的人的认可，那么你其实是一个卑贱的人。
+精英们最在行的事情，其实是拉关系，互相吹捧，唱高调，包装自己。他们在心理上是弱小的，他们必须依赖于名校或者大公司的牌子，依赖于校友的认可，依赖于那些身居高位的人的赞许和提拔。他们很多人不过是某些幕后黑手的木偶人而已。有句话说得好：宠为下，得知若惊，失之若惊。如果你需要身居高位的人的认可，那么你其实是一个卑贱的人。
 
-精英主义者集结的地方，被中国人叫做“世界一流大学”，比如哈佛，耶鲁，[Cornell](http://www.yinwang.org/blog-cn/2014/01/04/authority)…… 进入这些大学的人，老喜欢写书吹捧这些大学有多么多么了不起。而你进去一看，发现里面的教授很少有真知灼见，上课照本宣科，学生忙着抄笔记，学得一知半解，考试焦头烂额。这些教授倒是对媒体宣传相当在行，屁大点研究，总要让纽约时报之类的搞一下政治宣传，然后还在院系主页上宣传一下，看那某某教授的研究被纽约时报报道了！而他们的实际水平，比起中西部州立大学里面潜心做研究的不知名学者，差不止一个档次。
+精英主义者集结的地方，被中国人叫做“世界一流大学”：哈佛，耶鲁，[Cornell](http://www.yinwang.org/blog-cn/2014/01/04/authority)…… 进入这些大学的人，一般都是通过关系或者金钱，却吹捧自己是因为才能出众，而进入那些学校。等你亲自进去一看，发现里面的教授很少有真知灼见，上课照本宣科，学生忙着抄笔记，学得一知半解，作业互相抄袭，考试焦头烂额，蒙混过关。
 
-精英大学里面，一般都存在一些秘密组织，比如 Cornell 的 [Quill and Dagger](https://en.wikipedia.org/wiki/Quill_and_Dagger)。这些组织就是精英聚集的场所。这些为什么要是秘密组织的呢？因为他们会进行一些见不得人的犯罪活动，导致成员之间互相抓住把柄，从而形成共生死的犯罪集团。很多进入美国白宫的精英，就是从这种秘密组织出来的，比如臭名昭著的克林顿国家安全顾问 [Sandy Berger](https://en.wikipedia.org/wiki/Sandy_Berger)，就是 Quill and Dagger 的成员。甚至有些名校的[整个学院](https://www.youtube.com/watch?v=cKy2c-itZEg&feature=youtu.be&t=1255)，都被罪犯像妓女一样花钱包下来，成为培养他们的罪恶接班人的摇篮。这些人进入政府之后，就导致整个政府机构成为犯罪集团。
+这些教授倒是对宣传工作相当在行，屁大点研究，总要让纽约时报之类的搞一下政治宣传，然后在院系主页上贴个告示，看哪，我们教授的研究被纽约时报报道了！这些人的实际水平，比起很多州立大学里潜心做研究的不知名学者，差不止一个档次。很多中国人都不知道，纽约时报，华盛顿邮报，CNN 之类，其实都是婊子媒体，出钱或者有关系就给你发文拍片。纽约时报的老板就是个毒贩子，黑帮老大。
 
-美国精英们传统的宣传中心，叫做好莱坞。好莱坞通过形象包装，形成偶像崇拜，使得好莱坞电影变成洗脑的工具。你可能已经听说了，好莱坞的明星们几乎每一个都吸毒，很多还进行更可怕的犯罪活动。有一种他们用于互相牵制的，极其变态的犯罪活动，叫做恋童癖（[pedophilia](https://en.wikipedia.org/wiki/Pedophilia)），或者直接一点，叫做买卖儿童性奴（child sex trafficking）。我们都听说 Michael Jackson 强奸男童的故事，然后又莫名其妙死了，就是这种犯罪集团成员之间内斗的一种表现。买卖儿童性奴的犯罪活动，在好莱坞非常的[普遍](https://www.youtube.com/watch?v=roW238dfUUk)。这种在中国是要判死刑的重罪，美国政府却几乎完全不管，因为政府官员们在干同样的事情……
+精英大学里面，一般都存在一些“秘密组织”，比如 Cornell 的 [Quill and Dagger](https://en.wikipedia.org/wiki/Quill_and_Dagger)。这些组织就是精英聚集的场所。为什么要是秘密的呢？因为他们会进行一些见不得人的犯罪活动，导致成员之间互相抓住把柄，从而形成共生死的团伙。甚至有些名校的[整个学院](https://www.youtube.com/watch?v=cKy2c-itZEg&feature=youtu.be&t=1255)，都被罪犯花重金包下来，成为培养他们接班人的摇篮。所以美国的名校，其实跟娼妓没什么两样，名气越是大的越是这样。
 
-这些极其邪恶而变态的活动，也就是全世界的精英团伙里面，正在进行的：[美国白宫](https://www.youtube.com/watch?v=ekejhDu-biQ)，[英国王室](https://www.youtube.com/watch?v=NUfJXdMIRGw)，各种世界一流大学，好莱坞，…… 这些团体一直以来都依靠媒体来掩盖自己罪恶的真相。而这次的美国总统大选，导致了这些主流媒体的轰然倒塌：CNN，华盛顿邮报，纽约时报，时代周刊，BBC，…… 这些媒体都是被邪恶势力控制的。
+很多进入白宫的精英，就是从这种名校秘密组织出来的，比如臭名昭著的克林顿国家安全顾问 [Sandy Berger](https://en.wikipedia.org/wiki/Sandy_Berger)，就是 Quill and Dagger 的成员。在 [9/11 恐怖袭击](http://www.yinwang.org/blog-cn/2016/12/01/september-eleven)发生之后，Sandy Berger 进入国家档案馆，偷走关于克林顿与 9/11 之间关系的资料原版，并且销毁。这种销毁证据的做法，说明克林顿跟 9/11 肯定有扯不清的关系。
 
-在互联网发达之后，精英们也利用网络媒体来对公众进行洗脑。他们的帮凶包括 [Google](https://twitter.com/wikileaks/status/809305627319291906)，[Facebook](https://www.facebook.com/zuck/posts/10103253901916271)，Twitter，…… 这些社交媒体不但在政治上帮助这些精英搞宣传，而且帮助他们屏蔽对他们不利的真相，把真相都叫做“假新闻”。而事实是，CNN 之类的主流媒体才是假新闻。如果你仔细研究一下，会发现 Facebook 和华盛顿邮报的幕后支持者，其实是作恶多端的 [CIA](https://www.youtube.com/watch?v=oFH3uLuNL5Y)。
+美国精英们的“宣传部”，叫做好莱坞。好莱坞通过形象包装，形成偶像崇拜，使得好莱坞电影成为给人们洗脑的工具。你可能已经听说了，好莱坞的明星们几乎每一个都吸毒，很多还进行更可怕的犯罪活动。有一种极其变态的犯罪活动，叫做恋童癖（[pedophilia](https://en.wikipedia.org/wiki/Pedophilia)），或者直接一点，叫做性虐儿童（child sex abuse）。我们都听说 Michael Jackson 强奸男童的故事，后来又莫名其妙死了，就是这种团伙成员之间内斗的一种表现。
 
-真正独立而自由的“另类媒体”，比如 [InfoWars](http://www.infowars.com/)，[Breitbart](http://www.wnd.com/)，[Prison Planet](http://www.prisonplanet.com)，再加上极其靠谱的 [WikiLeaks](https://wikileaks.org/)，通过多方面的证据，揭示了这些精英的真相。是这些敢于说真话的人，用他们的[生命](https://en.wikipedia.org/wiki/Andrew_Breitbart#Death)和[自由](http://www.yinwang.org/blog-cn/2016/11/22/assange-donation)，换来了世界局势的转机，同时导致了精英主义的灭亡。
+这种令人发指的犯罪活动，在好莱坞非常的[普遍](https://www.youtube.com/watch?v=roW238dfUUk)。它还经常跟邪教仪式（satanic ritual）结合在一起，这些人会在仪式上当场宰杀儿童用来“祭祀”。这种丧尽天良的可怕罪行，在很多其他国家是要判死刑的，甚至绞刑示众，美国政府却几乎完全不管，因为白宫的官员们在干同样的事情。这不是危言耸听，如果你仔细研究，就会发现这就是全世界的精英团伙里面正在进行的：[美国白宫](https://www.youtube.com/watch?v=ekejhDu-biQ)，[英国王室](https://www.youtube.com/watch?v=NUfJXdMIRGw)，[好莱坞](https://www.youtube.com/watch?v=roW238dfUUk)，[天主教会](https://en.wikipedia.org/wiki/Catholic_Church_sexual_abuse_cases)，世界一流大学……
 
-未来的世界属于每一个平凡的人，而不属于精英们。这些邪恶的精英统治的时代，已经快要结束。如果你现在还以为有任何人高人一等，你的心里还存在某种偶像，你还以为世界上有[天才](http://www.yinwang.org/blog-cn/2015/10/18/turing)存在，你还在乎好莱坞明星或者 [Zuckerberg](https://www.youtube.com/watch?v=oFH3uLuNL5Y) 之类的“名人”说的话做的事，请仔细再看看这篇文章和相关的视频，意识到这种想法有多么的愚蠢，从而把精英主义清理出你的头脑。
+![](http://www.yinwang.org/images/queen-wanted.jpg)
+
+美国这几年每年有超过 40 万儿童失踪，每年车祸死亡的人数才 3 万多。失踪儿童数量比车祸死亡人数大十倍以上，这是不正常的。这些失踪的儿童到哪里去了？另外，美国有些儿童领养中心和孤儿院，被查出在从事贩卖儿童性奴（child sex trafficking）的生意。这些人还在落后和受灾国家办[孤儿院](http://www.usapoliticstoday.com/hillary-clinton-kids-wikileaks-nuke-hillary-see-potential-clinton-foundation-sex-trafficking-ring)，说是人道主义援助，结果被当地警察发现他们带走的小孩都是有父母的…… 你不觉得毛骨悚然吗？
+
+反正看到这一切的时候，我的世界观都被颠覆了。我真希望这只是一场还没醒来的噩梦，可是无数的证据和证人都说明这就是现实！
+
+精英们一直以来都依靠媒体来掩盖自己罪恶的真相，给人洗脑，冠冕堂皇的让人崇拜。而这次的美国总统大选，导致了这些主流媒体的轰然倒塌：CNN，华盛顿邮报，纽约时报，时代周刊，BBC，…… 我们现在知道，这些媒体都是被庞大的恶势力网络控制的。
+
+在互联网发达之后，精英们也利用网络媒体来对公众进行洗脑。他们的帮凶包括 [Google](https://twitter.com/wikileaks/status/809305627319291906)，Facebook，Twitter，…… 这些社交媒体不但在政治上帮助这些精英搞宣传，而且帮助他们屏蔽对他们不利的真相，把这些真相都叫做“[假新闻](https://www.facebook.com/zuck/posts/10103253901916271)”。而事实是，CNN 之类的主流媒体才是假新闻。如果你仔细研究一下，会发现 Facebook 和华盛顿邮报的幕后支持者，其实是作恶多端的 [CIA](https://www.youtube.com/watch?v=oFH3uLuNL5Y)。
+
+真正独立而自由的“另类媒体”，比如 [InfoWars](http://www.infowars.com/)，[Breitbart](http://www.wnd.com/)，[Prison Planet](http://www.prisonplanet.com)，再加上异常强大的 [WikiLeaks](https://wikileaks.org/)，通过多方面的证据，揭示了精英们的真相。是这些敢于说真话的人，用他们的[生命](https://en.wikipedia.org/wiki/Andrew_Breitbart#Death)和[自由](http://www.yinwang.org/blog-cn/2016/11/22/assange-donation)，换来了世界局势的转机，同时导致了精英主义走向灭亡。现在听说某人是“精英”，我都得先考虑一下他跟这些龌龊的事情有没有关系，上网搜索调查一下。
+
+未来的世界属于每一个平凡的人，只是他们还在熟睡，旁边的吸血鬼们正在黑暗中选择他们的猎物…… 当真相的阳光照进来，当人们醒过来的时候，就是精英统治的时代结束的时候。如果你现在还以为有任何人高人一等，你的心里还存在某种偶像，你还以为世界上有[天才](http://www.yinwang.org/blog-cn/2015/10/18/turing)存在，你还很在乎好莱坞明星，或者 [Zuckerberg](https://www.youtube.com/watch?v=oFH3uLuNL5Y) 之类小丑说的话或者做的事，你还在梦想有一天把孩子送到哈佛念书，进入“上流社会”，请仔细再看看这篇文章和相关的视频，你会意识到这些想法有多么的愚蠢。
+
+你完全没有意识到自己的价值，你没有意识到身边的普通人的价值，你没有发现幸福就在身边。你只是生活在别人为你设计的梦里，追求那些他们让你追求的东西，最终却发现你出卖了灵魂。醒来的过程是痛苦的，但醒来后的未来是美好的。被精英们用欺骗手段收走的力量，就要回到人们的手里！
+
+（写这样一篇文章挺费神的，说真话是需要一些胆量的，所以如果你觉得开了眼界的话，请考虑付款 $3。谢谢！）
