Add the modification of the "elitism" post.

--- a/blog/2017-01-02-elitism.markdown
+++ b/blog/2017-01-02-elitism.markdown
@@ -6,19 +6,27 @@
 
 精英们最在行的事情，其实是拉关系，互相吹捧，唱高调，包装自己。他们在心理上是弱小的，他们必须依赖于名校或者大公司的牌子，依赖于校友的认可，依赖于那些身居高位的人的赞许和提拔。他们很多人不过是某些幕后黑手的木偶人而已。有句话说得好：宠为下，得知若惊，失之若惊。如果你需要身居高位的人的认可，那么你其实是一个卑贱的人。
 
-精英主义者集结的地方，被中国人叫做“世界一流大学”：哈佛，耶鲁，[Cornell](http://www.yinwang.org/blog-cn/2014/01/04/authority)…… 进入这些大学的人，一般都是通过关系或者金钱，却吹捧自己是因为才能出众，而进入那些学校。等你亲自进去一看，发现里面的教授很少有真知灼见，上课照本宣科，学生忙着抄笔记，学得一知半解，作业互相抄袭，考试焦头烂额，蒙混过关。
+精英主义者集结的地方，被中国人叫做“世界一流大学”：哈佛，耶鲁，[Cornell](http://www.yinwang.org/blog-cn/2014/01/04/authority)…… 进入这些大学的人，一般都是通过关系或者金钱，却吹捧自己是因为才能出众而进入那些学校。等你亲自进去一看，发现里面的教授很少有真知灼见，上课照本宣科，学生忙着抄笔记，学得一知半解，作业互相抄袭，考试焦头烂额，蒙混过关。
 
-这些教授倒是对宣传工作相当在行，屁大点研究，总要让纽约时报之类的搞一下政治宣传，然后在院系主页上贴个告示，看哪，我们教授的研究被纽约时报报道了！这些人的实际水平，比起很多州立大学里潜心做研究的不知名学者，差不止一个档次。很多中国人都不知道，纽约时报，华盛顿邮报，CNN 之类，其实都是婊子媒体，出钱或者有关系就给你发文拍片。纽约时报的老板就是个毒贩子，黑帮老大。
+这些教授倒是对宣传工作相当在行，屁大点研究，总要让纽约时报之类的搞一下政治宣传，然后在院系主页上贴个告示，看哪我们教授的研究被纽约时报报道了！这些人的实际水平，比起很多州立大学里潜心做研究的不知名学者，差不止一个档次。很多中国人都不知道，纽约时报，华盛顿邮报，CNN 之类，其实都是婊子媒体，出钱或者有关系就给你发文拍片。纽约时报的老板就是个毒贩子，黑帮老大。
 
-精英大学里面，一般都存在一些“秘密组织”，比如 Cornell 的 [Quill and Dagger](https://en.wikipedia.org/wiki/Quill_and_Dagger)。这些组织就是精英聚集的场所。为什么要是秘密的呢？因为他们会进行一些见不得人的犯罪活动，导致成员之间互相抓住把柄，从而形成共生死的团伙。甚至有些名校的[整个学院](https://www.youtube.com/watch?v=cKy2c-itZEg&feature=youtu.be&t=1255)，都被罪犯花重金包下来，成为培养他们接班人的摇篮。所以美国的名校，其实跟娼妓没什么两样，名气越是大的越是这样。
+实际上，“世界一流大学”这个名词，你只能在中国听到。在美国没有人使用这种词汇，甚至像“著名的”（prestigious）这种词都很少用。如果你进入普通的州立大学，会发现没有人在乎哈佛，耶鲁，Cornell 这些“常春藤联盟”。如果你老是提这些名字，会招致人的反感。因为这些大学的人都知道精英学校是什么东西，根本不屑于提到他们。
+
+精英大学不但以无能著称，它们比你现象的还要可怕许多。这些学校里面一般都存在一些“秘密组织”，比如 Cornell 的 [Quill and Dagger](https://en.wikipedia.org/wiki/Quill_and_Dagger)。这些组织就是精英聚集的场所。为什么要是秘密的呢？因为他们会进行一些见不得人的犯罪活动，导致成员之间互相抓住把柄，从而形成共生死的团伙。甚至有些名校的[整个学院](https://www.youtube.com/watch?v=cKy2c-itZEg&feature=youtu.be&t=1255)，都被罪犯花重金包下来，成为培养他们接班人的摇篮。所以美国的名校，其实跟娼妓没什么两样，名气越是大的越是这样。
 
 很多进入白宫的精英，就是从这种名校秘密组织出来的，比如臭名昭著的克林顿国家安全顾问 [Sandy Berger](https://en.wikipedia.org/wiki/Sandy_Berger)，就是 Quill and Dagger 的成员。在 [9/11 恐怖袭击](http://www.yinwang.org/blog-cn/2016/12/01/september-eleven)发生之后，Sandy Berger 进入国家档案馆，偷走关于克林顿与 9/11 之间关系的资料原版，并且销毁。这种销毁证据的做法，说明克林顿跟 9/11 肯定有扯不清的关系。
 
-美国精英们的“宣传部”，叫做好莱坞。好莱坞通过形象包装，形成偶像崇拜，使得好莱坞电影成为给人们洗脑的工具。你可能已经听说了，好莱坞的明星们几乎每一个都吸毒，很多还进行更可怕的犯罪活动。有一种极其变态的犯罪活动，叫做恋童癖（[pedophilia](https://en.wikipedia.org/wiki/Pedophilia)），或者直接一点，叫做性虐儿童（child sex abuse）。我们都听说 Michael Jackson 强奸男童的故事，后来又莫名其妙死了，就是这种团伙成员之间内斗的一种表现。
+从这个现象，你也许可以理解为什么很多精英大学容易出现学生自杀的事件。比如上次新闻报道说，一周之内有三个学生从 Cornell 校内同一座桥上跳下去[自杀](http://www.nytimes.com/2010/03/17/education/17cornell.html)，结果后来派了警察在桥上日夜巡逻。三个学生几乎在同一时间想不通，在同一地点寻短见，这也未免太巧了点吧。如果你研究过历史就会知道，美国很多所谓的自杀案件其实都是谋杀，只是用自杀来掩盖真相。所以这些学生到底是自杀还是谋杀，谁都说不清楚。想要把孩子送去精英大学读书的人，真的应该考虑一下他们的安全了。
 
-这种令人发指的犯罪活动，在好莱坞非常的[普遍](https://www.youtube.com/watch?v=roW238dfUUk)。它还经常跟邪教仪式（satanic ritual）结合在一起，这些人会在仪式上当场宰杀儿童用来“祭祀”。这种丧尽天良的可怕罪行，在很多其他国家是要判死刑的，甚至绞刑示众，美国政府却几乎完全不管，因为白宫的官员们在干同样的事情。这不是危言耸听，如果你仔细研究，就会发现这就是全世界的精英团伙里面正在进行的：[美国白宫](https://www.youtube.com/watch?v=ekejhDu-biQ)，[英国王室](https://www.youtube.com/watch?v=NUfJXdMIRGw)，[好莱坞](https://www.youtube.com/watch?v=roW238dfUUk)，[天主教会](https://en.wikipedia.org/wiki/Catholic_Church_sexual_abuse_cases)，世界一流大学……
+在精英大学上过研究生的人，大可不必觉得我是在嘲笑你们。精英主义者心目中的所谓“校友”，一般只包括本科阶段的同僚。如果你跟我一样在“二流学校”本科毕业，进入精英学校读研究生或者博士生，他们不会把你当成校友。相反，他们会歧视你，觉得你是去那里打工的，甚至嘲笑你好像什么都不懂，怎么进来的。这是因为本科是塑造人格和价值观的主要阶段，如果你的本科生活是在其它学校度过的，那么你并不具有这种“精英品质”，就算你之后进去读完博士也不会改变这个观念。这就是为什么有些中国人在国内本科都快毕业了，却退学去美国精英大学再读一个本科，因为这些人很想要成为精英，进入“主流社会”。
 
-![](http://www.yinwang.org/images/queen-wanted.jpg)
+然而现在我们已经看清楚了，美国的主流社会和精英们的本质，我们知道了他们在干些什么样的事情。所以如果你不是精英大学官方意义上的校友，反倒没有了这层嫌疑需要洗清。
+
+美国精英们的“宣传部”，叫做好莱坞。好莱坞通过形象包装，形成偶像崇拜，好莱坞电影就是给人们洗脑的工具。好莱坞明星们给人们灌输错误的标准：审美标准，道德标准。说实话，好莱坞这么多女影星走红地毯，就找不出几个好看的。可是由于他们给人洗脑，以至于很多天生丽质的女生从小耳濡目染，居然觉得好莱坞那些丑女明星比自己美，去模仿她们的化妆和衣着样式，甚至想去做整形手术，这样可以变得更像她们。这些美丽的女孩因为明星崇拜，失去了对自己的尊重和自信，真是可惜。
+
+说到道德，你可能已经听说了，好莱坞的明星们几乎每一个都吸毒，很多还进行更可怕的犯罪活动。有一种极其变态的犯罪活动，叫做恋童癖（[pedophilia](https://en.wikipedia.org/wiki/Pedophilia)），或者直接一点，叫做性虐儿童（child sex abuse）。我们都听说 Michael Jackson 强奸男童的故事，后来又莫名其妙死了，就是这种团伙成员之间内斗的一种表现。有趣的是，好莱坞有很多的明星最后都说是自杀或者吸毒过量死亡。他们到底是自杀还是谋杀，也很值得怀疑。
+
+恋童活动在好莱坞非常的[普遍](https://www.youtube.com/watch?v=roW238dfUUk)，它还经常跟邪教仪式（satanic ritual）结合在一起，这些人会在仪式上当场宰杀儿童用来“祭祀”。这种丧尽天良的可怕罪行，在很多其他国家是要判死刑的，甚至绞刑示众，美国政府却几乎完全不管，因为白宫的官员们在干同样的事情。这不是危言耸听，如果你仔细研究，就会发现这就是全世界的精英团伙里面正在进行的：[美国白宫](https://www.youtube.com/watch?v=ekejhDu-biQ)，[英国王室](https://www.youtube.com/watch?v=NUfJXdMIRGw)，[好莱坞](https://www.youtube.com/watch?v=roW238dfUUk)，[天主教会](https://en.wikipedia.org/wiki/Catholic_Church_sexual_abuse_cases)，世界一流大学……
 
 美国这几年每年有超过 40 万儿童失踪，每年车祸死亡的人数才 3 万多。失踪儿童数量比车祸死亡人数大十倍以上，这是不正常的。这些失踪的儿童到哪里去了？另外，美国有些儿童领养中心和孤儿院，被查出在从事贩卖儿童性奴（child sex trafficking）的生意。这些人还在落后和受灾国家办[孤儿院](http://www.usapoliticstoday.com/hillary-clinton-kids-wikileaks-nuke-hillary-see-potential-clinton-foundation-sex-trafficking-ring)，说是人道主义援助，结果被当地警察发现他们带走的小孩都是有父母的…… 你不觉得毛骨悚然吗？
 
