Update the elitism post.

--- a/blog/2017-01-02-elitism.markdown
+++ b/blog/2017-01-02-elitism.markdown
@@ -24,9 +24,9 @@
 
 美国精英们的“宣传部”，叫做好莱坞。好莱坞通过形象包装，形成偶像崇拜，好莱坞电影就是给人们洗脑的工具。好莱坞明星们给人们灌输错误的标准：审美标准，道德标准。说实话，好莱坞这么多女影星走红地毯，就找不出几个好看的。可是由于他们给人洗脑，以至于很多天生丽质的女生从小耳濡目染，居然觉得好莱坞那些丑女明星比自己美，去模仿她们的化妆和衣着样式，甚至想去做整形手术，这样可以变得更像她们。这些美丽的女孩因为明星崇拜，失去了对自己的尊重和自信，真是可惜。
 
-说到道德，你可能已经听说了，好莱坞的明星们几乎每一个都吸毒，很多还进行更可怕的犯罪活动。有一种极其变态的犯罪活动，叫做恋童癖（[pedophilia](https://en.wikipedia.org/wiki/Pedophilia)），或者直接一点，叫做性虐儿童（child sex abuse）。我们都听说 Michael Jackson 强奸男童的故事，后来又莫名其妙死了，就是这种团伙成员之间内斗的一种表现。有趣的是，好莱坞有很多的明星最后都说是自杀或者吸毒过量死亡。他们到底是自杀还是谋杀，也很值得怀疑。
+说到道德，你可能已经听说了，好莱坞的明星们几乎每一个都吸毒，很多还进行更可怕的犯罪活动。有一种极其变态的犯罪活动，叫做恋童癖（[pedophilia](https://en.wikipedia.org/wiki/Pedophilia)），或者直接一点，叫做性虐儿童（child sex abuse）。我们都听说 [Michael Jackson](https://youtu.be/iZ0B4jjNdjM?t=2963) 被指控强奸男童的事，后来又莫名其妙死了，这表现出团伙成员之间的内斗现象。有趣的是，好莱坞有很多的明星最后都说是自杀或者吸毒过量死亡。他们到底是自杀还是谋杀，也很值得怀疑。
 
-恋童活动在好莱坞非常的[普遍](https://www.youtube.com/watch?v=roW238dfUUk)，它还经常跟邪教仪式（satanic ritual）结合在一起，这些人会在仪式上当场宰杀儿童用来“祭祀”。这种丧尽天良的可怕罪行，在很多其他国家是要判死刑的，甚至绞刑示众，美国政府却几乎完全不管，因为白宫的官员们在干同样的事情。这不是危言耸听，如果你仔细研究，就会发现这就是全世界的精英团伙里面正在进行的：[美国白宫](https://www.youtube.com/watch?v=ekejhDu-biQ)，[英国王室](https://www.youtube.com/watch?v=NUfJXdMIRGw)，[好莱坞](https://www.youtube.com/watch?v=roW238dfUUk)，[天主教会](https://en.wikipedia.org/wiki/Catholic_Church_sexual_abuse_cases)，世界一流大学……
+恋童活动在好莱坞非常的[普遍](https://www.youtube.com/watch?v=roW238dfUUk)，它还经常跟邪教仪式（satanic ritual）结合在一起，这些人会在仪式上当场宰杀儿童用来“祭祀”。这种丧尽天良的可怕罪行，在很多其他国家是要判死刑的，美国政府却几乎完全不管，因为白宫的官员们在干同样的事情。这不是危言耸听，如果你仔细研究，就会发现这就是全世界的精英团伙里面正在进行的：[美国白宫](https://www.youtube.com/watch?v=ekejhDu-biQ)，[英国王室](https://www.youtube.com/watch?v=NUfJXdMIRGw)，[好莱坞](https://www.youtube.com/watch?v=roW238dfUUk)，[天主教会](https://en.wikipedia.org/wiki/Catholic_Church_sexual_abuse_cases)，世界一流大学……
 
 美国这几年每年有超过 40 万儿童失踪，每年车祸死亡的人数才 3 万多。失踪儿童数量比车祸死亡人数大十倍以上，这是不正常的。这些失踪的儿童到哪里去了？另外，美国有些儿童领养中心和孤儿院，被查出在从事贩卖儿童性奴（child sex trafficking）的生意。这些人还在落后和受灾国家办[孤儿院](http://www.usapoliticstoday.com/hillary-clinton-kids-wikileaks-nuke-hillary-see-potential-clinton-foundation-sex-trafficking-ring)，说是人道主义援助，结果被当地警察发现他们带走的小孩都是有父母的…… 你不觉得毛骨悚然吗？
 
