Update the "update" post and add the strike post.

--- a/blog/2017-04-06-update.markdown
+++ b/blog/2017-04-06-update.markdown
@@ -14,11 +14,13 @@
 
 光是写一个没有 bug 的 B+ 树，其实都够让绝大部分的程序员汗颜，更不要说把它集成到 StorSimple 的“异构云”（hybrid cloud）构架里面去。有个写过 B+ 树的 principal engineer 喜欢跟我咋呼要“先写测试”，可我就是直接两天把代码给写出来了，然后再写了一个测试，就已经到了无懈可击的地步。代码优雅而通用化，不带有任何业务逻辑，可以原封不动用到其他地方，比如数据库索引。像 B+ 树这么复杂的数据结构，你还真是很难把它写得简单正确还通用，但我洞察到了精髓，所以稍加思索就办到了。这是我平生第一次写 B+ 树。
 
-微软有一些厉害的 principal engineer，他们的 B+ 树代码我看过了。实话说吧，虽然可以用，但非常繁复没法看，很难确信它是正确的。每次用到新的地方，你都得改动挺多代码才行，不能作为“库代码”来调用。而且你一改可能就给改错了，难怪跟我说需要很多很多的测试，还说要先写测试再写代码什么的…… 当然我说这些完全没有贬低微软工程师的能力，有个会写 B+ 树的 principal engineer 跟我关系相当好，初期还给了我挺好的参考资料，所以我无意贬低他。不过呢，写代码不能超越王垠，是再正常不过的事了，不是吗？所以当然不是耻辱 :P 相比其它肤浅的公司（Google，Facebook……），微软的好些人显然已经是世界顶级的水平，兢兢业业踏踏实实的在做自己的工作，而且在必要的时候给了我一些启发，人也相当好。可是在代码的优雅，简单和可靠性上，世界上还真没有人可以跟王垠抗衡。
+微软有一些厉害的 principal engineer，他们的 B+ 树代码我看过了。实话说吧，虽然可以用，但非常繁复没法看，很难确信它是正确的。每次用到新的地方，你都得改动挺多代码才行，不能作为“库代码”来调用。而且你一改可能就给改错了，难怪跟我说需要很多很多的测试，还说要先写测试再写代码什么的…… 当然我说这些完全没有贬低微软工程师的能力，有个会写 B+ 树的 principal engineer 跟我关系相当好，初期还给了我挺好的参考资料，所以我无意贬低他。不过呢，写代码不能超越王垠，是再正常不过的事了，不是吗？所以当然不是耻辱 :P 相比其它肤浅的公司（Google，Facebook……），微软的好些人显然是有两刷子的，兢兢业业踏踏实实的在做自己的工作，而且在必要的时候给了我一些启发，人也相当好。可是在代码的优雅，简单和可靠性上，世界上还真没有人可以跟王垠抗衡。
 
-微软确实有很多好人，不过呢公司的官僚系统跟人其实是两码事。我也看到了，我创造的价值已经大大的高于我的薪酬。微软这公司给我的级别和薪资，完全就是一个笑话。最初就是忽悠的，比我以前公司的 title 还低一级，还说你知道微软要升到 senior 级别需要多少经验吗，你要有微软的经验才行，不是其它地方的经验！跟我说先给我一个低点的 title，进来半年以内升职，到现在 9 个月了没有一点动静。去年 7 月中进来的，年底 bonus 都没有，说是公司规定不满半年的没有 bonus。我管你公司规定如何，我工作了将近半年，提供了这么多价值，一点 bonus 都没有也太说不过去。
+微软工程师确实有很多好人，不过呢公司的官僚系统跟人其实是两码事。我也看到了，我创造的价值已经大大的高于我的薪酬。微软这公司给我的级别（别去查了，是 SDEV2）和薪资，完全就是一个笑话。最初就是忽悠的，我在之前公司就已经是 senior，早就已经对这 title 很不满意了，还给我降一级，说你知道微软要升到 senior 级别需要多少经验吗，你要有微软的经验才行，不是其它地方的经验！说先给你个低点的 title（当然工资比以前高），进来半年以内升职，到现在 9 个月了没有一点动静，却跟你说什么：“Review 的时间还没到，要等到 9 月去了。” 去年 7 月中进来的，年底 bonus 都没有，说：“公司规定不满半年的没有 bonus，自己看看手册吧。” 我管你公司规定如何，我差几天就工作了半年，提供了这么多价值，一点 bonus 都没有，还得等一年？你玩我吧！
 
-而且还有人时不时的提醒我一下，好像在说，我不应该得到我应有的回报。比如：“看人家这个（拿L1签证工作的廉价劳动力）印度小妹，也做出了很了不起的成绩，人家才这个级别……” 很是拿 title 当回事，张口闭口“看看人家某 principal……”，“你要是 principal 才可以 remote……” 还喜欢引用某 principal 的话，奉为真理一样。吃饭的时候，跟我关系不错的 remote principal 本来过来跟我坐在一起，然后就被坐在另一桌的大老板叫过去了，说：“过来过来，别跟他们浪费时间。” 这 principal 只好跟我道歉之后走掉了。于是几个 principal 单独一桌，跟大老板一起吃，我和其他人另外一桌。这大老板呢，自以为级别高点（partner），从来不正眼看人，也从来不直接跟我谈话。好像很是高高在上，从几个台阶上面看我的样子。
+所有这些什么“公司规定”，其实都是借口，是“catch”，它们就像有些信用卡条款下面的小字，你不仔细看就以为小便宜就在眼前，结果根本不是的。那些小字写的是，你必须满足这样那样的条件才可以！所有这些诱惑的作用，就是把你变成一头拉磨的驴子。在你的头顶上架个杆子，上面挂着食物。你想吃到这眼前的食物，可是你每走一步这食物就随着你往前挪一步，所以你就总也吃不到，只是不停地给别人拉磨。总有人传言说，微软升职好快哦，看那谁进来那么低职位，很快就变成 principal 了。轮到你的时候，就发现完全不是那回事。等你去查，发现那个人升职根本就没那么快，好几年了才升了一级。于是你醒悟了，原来这些都是广告吧？
+
+而且还有人时不时的提醒你一下，好像在说，你不应该得到我应有的回报。比如：“看人家这个（拿L1签证工作的廉价劳动力）印度小妹，也做出了很了不起的成绩，人家才这个级别……” 很是拿 title 当回事，张口闭口“看看人家某 principal……”，“你要是 principal 才可以 remote……” 还喜欢引用某 principal 的话，奉为真理一样。吃饭的时候，跟我关系不错的 remote principal 本来过来跟我坐在一起，然后就被坐在另一桌的大老板叫过去了，说：“过来过来，别跟他们浪费时间。” 这 principal 只好跟我道歉之后走掉了。于是几个 principal 单独一桌，跟大老板一起吃，我和其他人另外一桌。这大老板呢，自以为级别高点（partner），从来不正眼看人，也从来不直接跟我谈话。好像很是高高在上，从几个台阶上面看我的样子。
 
 本来自己做不出来的东西，却偏要显得自己能做，以保持自己的权威，显得在指导你似的。有次居然当众对我说，你遇到了困难要告诉大家，我们这么多经验，随便帮你看一下就解决了。哈哈，我倒是想看看王垠都被卡住的问题，你们怎么解决！实话说吧，那几个 principal 经常都是在受我指导，走弯路的时候都是我在跟他们争论，及时制止，虽然有些时候不听，继续走弯路。当然，管理层绝对不会忘记的一件事情就是督促写注释，写测试，而且用的是对奴隶说话的口气，说：“你的代码注释太少了，要是你走了就没人能理解了。要是你想能放假，那就要写注释，否则没人能帮你维护代码，你就永远放不了假！” 当然，语气是调侃而温和的，然而听到好几次之后你就发现，这里面的含义是狠狠的，真心的。
 
