Add the recent posts.

--- a/blog/2017-04-06-update.markdown
+++ b/blog/2017-04-06-update.markdown
@@ -22,9 +22,9 @@
 
 而且还有人时不时的提醒你一下，好像在说，你不应该得到我应有的回报。比如：“看人家这个（拿L1签证工作的廉价劳动力）印度小妹，也做出了很了不起的成绩，人家才这个级别……” 很是拿 title 当回事，张口闭口“看看人家某 principal……”，“你要是 principal 才可以 remote……” 还喜欢引用某 principal 的话，奉为真理一样。吃饭的时候，跟我关系不错的 remote principal 本来过来跟我坐在一起，然后就被坐在另一桌的大老板叫过去了，说：“过来过来，别跟他们浪费时间。” 这 principal 只好跟我道歉之后走掉了。于是几个 principal 单独一桌，跟大老板一起吃，我和其他人另外一桌。这大老板呢，自以为级别高点（partner），从来不正眼看人，也从来不直接跟我谈话。好像很是高高在上，从几个台阶上面看我的样子。
 
-本来自己做不出来的东西，却偏要显得自己能做，以保持自己的权威，显得在指导你似的。有次居然当众对我说，你遇到了困难要告诉大家，我们这么多经验，随便帮你看一下就解决了。哈哈，我倒是想看看王垠都被卡住的问题，你们怎么解决！实话说吧，那几个 principal 经常都是在受我指导，走弯路的时候都是我在跟他们争论，及时制止，虽然有些时候不听，继续走弯路。当然，管理层绝对不会忘记的一件事情就是督促写注释，写测试，而且用的是对奴隶说话的口气，说：“你的代码注释太少了，要是你走了就没人能理解了。要是你想能放假，那就要写注释，否则没人能帮你维护代码，你就永远放不了假！” 当然，语气是调侃而温和的，然而听到好几次之后你就发现，这里面的含义是狠狠的，真心的。
+虽然口头上的政策是所有级别一视同仁，然而久而久之你就发现一些微妙的区别。有些话，管理层是不敢对 principal 级别的人说的，然而他们却可以对较低级别的人说，而这些话又正好表现出微妙的不尊重。本来自己做不出来的东西，却偏要显得自己能做，以保持自己的权威，显得在指导你似的。有次居然当众对我说，你遇到了困难要告诉大家，我们这么多经验，随便帮你看一下就解决了。哈哈，我倒是想看看王垠都觉得棘手的问题，你们怎么解决！实话说吧，那几个 principal 经常都是在受我指导，走弯路的时候都是我在跟他们争论，及时制止，虽然有些时候不听，继续走弯路。当然，管理层绝对不会忘记的一件事情就是督促写注释，写测试，而且用的是对奴隶说话的口气，说：“你的代码注释太少了，要是你走了就没人能理解了。要是你想能放假，那就要写注释，否则没人能帮你维护代码，你就永远放不了假！” 说这话语气是调侃而温和的，然而听到好几次之后你就发现，这里面的含义是狠毒而贪婪的。如果是个 principal engineer，就没人敢叫他写注释！
 
-这一切都让我心里很不是滋味。这种情况，不仅我这样顶级专家难以接受，这是任何一个文明人都难以接受的。我压根就从来没把 title 当回事，我对待 principal engineer 和印度小妹是同样的尊重。张口闭口 principal，那倒是叫你的 principal engineer 写出可以跟我匹敌的代码来啊？实话说吧，门都没有。世界上就只有一个人可以做到这个事情。微软的所有 title，全世界公司和大学的所有 title，还真没有一个是可以衡量本人的。管你什么 principal, partner, distinguished…… 只要跟我一聊，我就知道他脑子里有多少货。资本主义根深蒂固的劣根性就是利用这些标签，肆无忌惮的贬低人的价值，拿白菜的价钱买白粉。你稍微谦虚一点，就有人真把自己当回事了，开始用“老资格”的口气说话。这不是微软一家的问题，然而不管在哪里出现都是值得鄙视的。
+这一切都让我心里很不是滋味。这种情况，不仅我这样顶级专家难以接受，这是任何一个文明人都不应该接受的。我压根就从来没把 title 当回事，我对待 principal engineer 和印度小妹是同样的尊重。张口闭口 principal，那倒是叫你的 principal engineer 写出可以跟我匹敌的代码来啊？实话说吧，门都没有。世界上就只有一个人可以做到这个事情。微软的所有 title，全世界公司和大学的所有 title，还真没有一个是可以衡量本人的。管你什么 principal, partner, distinguished…… 只要跟我一聊，我就知道他脑子里有多少货。资本主义根深蒂固的劣根性就是利用这些标签，肆无忌惮的贬低人的价值，拿白菜的价钱买白粉。你稍微谦虚一点，就有人真把自己当回事了，开始用“老资格”的口气说话。这不是微软一家的问题，然而不管在哪里出现都是值得鄙视的。
 
 本来进微软的时候我就想，这是我在离开美国之前想看的最后一个公司。所以呢，我的微软之行已经达到了它的目的，也快要到达它的尽头。对于 Google 我只有鄙视，而对于微软，我觉得技术能力还是有那么几刷子的。如果 Google 得分是 D 的话，那微软倒是可以得 B。然而在这里，技术能力确实没法得到公平的回报和尊重。过了这么几个月，我觉得也该是寻求自身价值应有回报的时候了。在美国待了十年，我已经很清楚，美国根本不是一个尊重事实和人才的国度。从来都不是，换了总统也不会是。这个虚伪而邪恶的国家，正在继续走向昏庸和毁灭。这一切，我已经看得很透了。
 
