--- a/blog/2017-04-11-strike.markdown
+++ b/blog/2017-04-11-strike.markdown
@@ -12,4 +12,6 @@
 
 这种“不计回报的付出”，使得资本家用极少的金钱买到太多的价值。这不仅导致自身的贬值，而且还会导致其他人失业，所以这种行为损人而不利己。由于这个原因，我必须立即停止对微软提供廉价服务。
 
-由于这个举措，我可以在两个月之内返回中国。在中国，我将拒绝一切类似这样的不公平交易，以及任何不尊重人的价值的行为。
+外科专家用白菜的价钱给你换了一颗心脏，还没有复诊呢，就显示出各种抠门和不尊重，所以他就不管你了，听天由命吧。我的离去会对项目造成不小的打击，然而这是一个深刻的教训。负责核心技术的 architect 走了，你们没能留住他，丢下无人敢碰的代码。现在好不容易有个人能够一眼看穿这代码在干什么，你们又各种抠门和不尊重，然后他又走了。这样不尊重人才，不失败才怪呢。
+
+由于这个举动，我可以在两个月之内返回中国。在中国，我将拒绝一切类似这样的不公平交易，以及任何不尊重人的价值的行为。
