Add the AI post and update some earlier ones.

--- a/blog/2017-04-19-yinhei.markdown
+++ b/blog/2017-04-19-yinhei.markdown
@@ -22,13 +22,13 @@
 
 由于这个原因，我删掉了那篇博文。自己的技术机密和这种人的名字，都不应该出现在我的博客上面，他们应该被抹去。
 
-### 曾经的“朋友”
+### 所谓“老同学”
 
 垠黑的队伍里面，其实也有少数老同学一类的。很多人总是在乎老同学情谊，然而其实每个人的老同学里面，有几个是真正的朋友呢？
 
-当我离开 Coverity 时，大骂这公司的恶劣行径。这时候一个清华的老同学给我 email，说想跟我聊聊。我以前就跟他说话不大投机，不是一类人。但念在老同学的情面，觉得他现在联系我，可能想口头上支持我一下，也没指望他帮什么忙。于是按约好的时间打电话给他，结果只甩给我一句：“我在给我家老二换尿布忙着呢！” 就挂机了。明明是他主动找我聊，打过去却又说他很忙，这老同学真是很有礼貌啊 :P 百思不得其解，不知道他的话是不是在表达这样一个意思：我都生了二胎了，王垠你混的也太差吧！后来他又没头没脑发 email 给我，说：“我正在用 Coverity 的产品呢！” 然后我明白了，原来他因为 Coverity 的产品还不错，就觉得我不该骂 Coverity 对待员工的恶劣行径。然后这人表达能力也有问题，不知道他到底想说什么。
+当我离开 Coverity 时，大骂这公司的恶劣行径。这时候一个清华的老同学给我 email，说想跟我聊聊。我以前就跟他说话不大投机，不是一类人。但念在老同学的情面，觉得他现在联系我，可能想口头上支持我一下，也没指望他帮什么忙。于是按约好的时间打电话给他，结果只甩给我一句：“我在给我家老二换尿布忙着呢！” 就挂机了，再也没有打回来。明明是他主动找我聊，打过去却又说他很忙，这老同学真是很有礼貌啊 :P 百思不得其解，不知道他的话是不是在表达这样一个意思：我都生了二胎了，王垠你混的也太差吧！后来他又没头没脑发 email 给我，说：“我正在用 Coverity 的产品呢！” 然后我明白了，原来他因为 Coverity 的产品还不错，就觉得我不该骂 Coverity 对待员工的恶劣作法。然后这人表达能力也有问题，不知道他到底想说什么。
 
-世界上就是有这样的老同学，本来当年关系就不咋的，现在居然一联系就是在嘲笑你。这样的老同学，不联系也罢。类似的，特地来嘲讽我的老同学还有另外两个，都是当年说话就不投机的，喜欢吹牛扯淡，不择手段追求功名利禄那种，甚至有点猥琐。真正的老同学和朋友，其实一直联系就没断过，也不会看到别人转载我的文章才来问候。
+世界上就是有这样的老同学，本来当年关系就不咋的，一直没联系，现在主动找上门来，居然开口就嘲笑你。这样的老同学心态不正常，不联系也罢。类似的，特地来嘲讽我的老同学还有另外两个，都是当年说话就不投机的，喜欢吹牛扯淡，不择手段追求功名利禄那种，甚至很猥琐。真正的老同学和朋友，联系就没断过，也不会看到别人转载我的文章才来问候。
 
 ### 为什么会有垠黑
 
@@ -40,6 +40,12 @@
 
 那么这种人为什么想黑我呢？你想想，有这么一个叫王垠的，他看透了很多东西，他的文章总是揭示各种技术和社会的真相。他告诉你，自动驾驶车是不切实际的幻想，Go 语言和 Kubernetes 其实是非常混乱不成熟设计糟糕的技术，他告诉你 PL 领域的很多研究其实完全无法投入实用的，他讲述自己在 Google，Coverity 等公司的恶劣遭遇…… 每当王垠揭露这样一个事情，这种夸夸其谈的小人就少了一个可以吹嘘，可以作为靠山的东西，反而会因为自己吹嘘过某个东西，引起相反的效果。看他转发那种马屁文章的人，会开始识破他们的真面目。
 
-这种人显然不希望真相得到传播，因为真相会威胁到他在社会上的立足之地，所以他们会在网上群起攻击王垠。比如有人会说：“王垠吹得那么牛那么神，那怎么在微软的职称才是个 SDE2？” 还有人嘲笑说：“老王啊老王，年纪一大把了还在追求自己的情怀，看我，十年前就开始追求财富……” 各种这样的嘲笑和侮蔑。然而这有意义吗？任何正直有良知的人看了这些，都知道这些人是什么东西。他们的活动圈子，不过也就是那一群互相吹捧的垃圾而已。这些人的话，对于我来说就像是哈巴狗的叫声，完全不能引起我情绪的波动。
+这种人显然不希望真相得到传播，因为真相会威胁到他在社会上的立足之地，所以他们会在网上群起攻击王垠。比如有人会说：“王垠吹得那么牛那么神，那怎么在微软的职称才是个 SDE2？” 还有人嘲笑说：“老王啊老王，年纪一大把了还在追求自己的情怀，看我，十年前就开始追求财富……” 各种这样的嘲笑和侮蔑。然而这有意义吗？任何正直有良知的人看了这些，都知道这些人是什么东西。他们的活动圈子，不过也就是那一群互相吹捧的垃圾而已。这些人的话，对于我来说就像是哈巴狗的叫声，完全不能引起我情绪的波动。我写这篇文章的原因，其实主要是我的有些朋友看了那些很不平静，去跟他们对骂。我不想让朋友们的心情受到影响，所以在这里写一篇文章，一巴掌把网上这些苍蝇蚊子全都拍死，省得我朋友去费心 :)
 
-很多人看到网上一片骂声，却没有发现只有心理不正常，太无聊的人才会上那些网站。有真知灼见的人，好些都很少上网，听说了我的故事都直接联系我，不会在网上谈论这些东西。可以说我的圈子是谈笑有鸿儒，往来无白丁。当然了，我不会指出这些垠黑的名字，因为我不想被狗咬。然而看过我文章的人，他们显然会擦亮自己的眼睛，识别出这些夸夸其谈，两面三刀的小人，所以这种人在社会上的势力会越来越小。正直而有真知灼见的人都会支持我，我们将联合在一起，互相支持，逐渐改善 IT 业界和职场的不正之风。
+### 网络上没有人知道你是一条狗
+
+很多人看到“网上”一片骂声，却没有发现只有心理不正常，太无聊的人才会上那些网站。有真知灼见的人，好些都很少上网，听说了我的故事都直接联系我，不会在网上谈论这些东西。可以说我的圈子是谈笑有鸿儒，往来无白丁。至于那些“网民”们在说些什么，对于我完全无足轻重。因为“网络上没有人知道你是一条狗”，所以我根本不把网民当做人来对待。
+
+有人认为我在“网上”很活跃，甚至认为我是“网红”，然而我从来就不认为我写文章是在“上网”，我写文章从来就不是为了取悦任何人，所以也跟“网红”扯不上任何关系。正好相反，我是一个完全活在现实世界的人，我跟网民是完全隔绝的。我的文章虽然放在“网上”，依靠网络传播，然而它们就像鲁迅登在报纸上的文章一样，并不属于网络交流。这甚至不属于交流，只能叫做“发表”。在这个过程中，信息的传播是单向的，我从来不看任何人对我文章的评价。不是因为我害怕看人们的评价，而是因为没有人有资格来评价，所以我不在乎。我从来不参与任何网络讨论区的讨论，从来不上 Facebook，知乎，MITBBS 之类的网站。我甚至屏蔽绝大部分微信联系人的朋友圈，我完全不在乎他们在看什么，想什么，做什么。对于我来说，只有面对面的交流才是真实可靠的。
+
+所以呢，这些垠黑其实对我一点作用都没有。他们想抹黑我，想吓退我，然而他们在我眼里不过是哈巴狗而已。当然了，我不会指出这些垠黑的名字，因为我不想被狗咬。然而看过我文章的人，他们显然会擦亮自己的眼睛，在现实世界中识别出这些夸夸其谈，两面三刀的小人，所以这种人在社会上的势力会越来越小。正直而有真知灼见的人都会支持我，我们将联合在一起，互相支持，逐渐改善 IT 业界和职场的不正之风。
