Add the recent May post and update format of MANY posts.

--- a/blog/2013-03-08-on-syntax.markdown
+++ b/blog/2013-03-08-on-syntax.markdown
@@ -22,7 +22,7 @@ Lisp （Scheme 的前身）是世界上第二老的程序语言。最老的是 F
 
 在 Lisp 诞生的时候，它的设计者们一下子没能想出一种好的语法，所以他们决定干脆先用括号把这语法树的结构全都括起来，一个不漏。等想到更好的语法再换。
 
-自己想一下，如果要表达一颗“树”，最简单的编码方式是什么？就是用括号把每个节点的“数据”和“子节点”都括起来放在一起。Lisp 的设计者们就是这样想的。他们把这种完全用括号括起来的表达式，叫做“S表达式”（S 代表 "symbolic"）。这貌似很“粗糙”的设计，甚至根本谈不上“设计”。奇怪的是，在用过一段时间之后，他们发现自己已经爱上了这个东西，再也不想设计更加复杂的语法。于是S表达式就沿用至今。
+自己想一下，如果要表达一颗“树”，最简单的编码方式是什么？就是用括号把每个节点的“数据”和“子节点”都括起来放在一起。Lisp 的设计者们就是这样想的。他们把这种完全用括号括起来的表达式，叫做“S表达式”（S 代表 “symbolic”）。这貌似很“粗糙”的设计，甚至根本谈不上“设计”。奇怪的是，在用过一段时间之后，他们发现自己已经爱上了这个东西，再也不想设计更加复杂的语法。于是S表达式就沿用至今。
 
 在使用过 Scheme，Haskell，ML，和常见的 Java，C，C++，Python，Perl，…… 之后，我也惊讶的发现， Scheme 的语法，不但是最简单，而且是最好看的一个。这不是我情人眼里出西施，而是有一定理论依据的。
 
@@ -40,7 +40,11 @@ Lisp （Scheme 的前身）是世界上第二老的程序语言。最老的是 F
 
 其实 Lisp 已经可以轻松地表示这种公式，比如对 `x^2` 进行微分，可以表示成
 
+<div class="highlighter-rouge">
+
           (D ‘(^ x 2) ‘x)
+
+</div>
 
 看到了吗？微分不过是一个用于处理符号的函数 `D`，输入一个表达式和另一个符号，输出一个新的表达式。
 
@@ -54,37 +58,53 @@ Lisp （Scheme 的前身）是世界上第二老的程序语言。最老的是 F
 
 其实我一直都在想，如果把数学看成是一种程序语言，它也许就是世界上语法最糟糕的语言。数学里的“变量”，几乎总是没有明确定义的作用域（scope）。也就是说他们只有“全局变量”。上一段话的 x，跟下一段话的 x，经常指的不是同一个东西。所以训练有素的数学家，总是避免使用同一个符号来表示两种不同的东西。很快他们就发现所有的拉丁字母都用光了，于是乎开始用希腊字母。大写的，小写的，粗体的，斜体的，花体的，…… 而其实，他们只不过是想实现 C++ 里的 “namespace”。
 
-可惜的是，很多程序语言的设计者没能摆脱数学的思想束缚，对数学和逻辑有盲目崇拜的倾向。所以他们继续在新的语言里使用中缀表达法。Haskell，ML，Coq，Agda，这些“超高级”的语言设计，其实都中了这个圈套。在 Coq 和 Agda 里面，你不但可以使用中缀表达式，还可以定义所谓的 "mixfix" 表达式。这样其实是把简单的问题复杂化。想让自己看起来像“数学”，很神秘的样子，其实是学会了数学的糟粕，自讨苦吃。
+可惜的是，很多程序语言的设计者没能摆脱数学的思想束缚，对数学和逻辑有盲目崇拜的倾向。所以他们继续在新的语言里使用中缀表达法。Haskell，ML，Coq，Agda，这些“超高级”的语言设计，其实都中了这个圈套。在 Coq 和 Agda 里面，你不但可以使用中缀表达式，还可以定义所谓的 “mixfix” 表达式。这样其实是把简单的问题复杂化。想让自己看起来像“数学”，很神秘的样子，其实是学会了数学的糟粕，自讨苦吃。
 
 另外，由于 Lisp 的表达能力和灵活性比其他语言要大很多，所以类似 C 或者 Pascal 那样的语法其实不能满足 Lisp 的需要。在 Lisp 里，你可以写 (+ 10 (if test 1 2)) 这样的代码，然而如果你使用 C 那样的无括号语法，就会发现没法很有效的嵌入里面的那个条件语句而不出现歧义。这就是为什么 C 必须使用 test? 1 : 2 这样的语法来表示 Lisp 的 if 能表示的东西。然而即使如此，你仍然会经常被迫加上一对括号，结果让程序非常难看，最后的效果其实还不如用 Lisp 的语法。在 C 这样的语言里，由于结构上有很多限制，所以才觉得那样的语法还可以。可是一旦加入 Lisp 的那些表达能力强的结构，就发现越来越难看。JavaScript（node.js）就是对此最好的一个证据。
 
 最后，从美学的角度上讲，S表达式是很美观的设计。所有的符号都用括号括起来，这形成一种“流线型”的轮廓。而且由于可以自由的换行排版，你可以轻松地对齐相关的部分。在 Haskell 里，你经常会发现一些很蹩脚，很难看的地方。这是因为中缀表达式的“操作符”，经常不能对在一起。比如，如果你有像这样一个 case 表达式：
 
+<div class="highlighter-rouge">
+
     case x
       Short _ -> 1
       VeryLooooooooooooooooooooooooog _ -> 2
 
+</div>
+
 为了美观，很多 Haskell 程序员喜欢把那两个箭头对齐。结果就成了这样：
+
+<div class="highlighter-rouge">
 
     case x
       Short _                           -> 1
       VeryLooooooooooooooooooooooooog _ -> 2
 
+</div>
+
 作为一个菜鸟级摄影师，你不觉得第一行中间太“空”了一点吗？
 
 再来看看S表达式如何表达这东西：
+
+<div class="highlighter-rouge">
 
     (case x
       (-> (Short _) 1)
       (-> (VeryLooooooooooooooooooooooooog _) 2))
 
+</div>
+
 发现“操作符总在最前”的好处了吗？不但容易看清楚，而且容易对齐，而且没有多余的间隙。
 
 其实我们还可以更进一步。因为箭头的两边全都用括号括起来了，所以其实我们并不需要那两个箭头就能区分“左”和“右”。所以我们可以把它简化为：
 
+<div class="highlighter-rouge">
+
     (case x
       ((Short _) 1)
       ((VeryLooooooooooooooooooooooooog _) 2))
+
+</div>
 
 最后我们发现，这个表达式“进化”成了 Lisp 的 case 表达式。
 
