--- a/blog/2015-03-13-a-plus.markdown
+++ b/blog/2015-03-13-a-plus.markdown
@@ -18,7 +18,7 @@
 
 就像爱因斯坦说的，任何一个傻瓜都可以把问题搞复杂，你需要一点天才，还有很多勇气，才能达到简单。很多牛人用“简单”来标榜自己设计的东西，然而我发现他们对简单的理解其实很肤浅。大部分时候他们用一种类似“皇帝的新装”的心理技巧——你如果不能理解他的东西，他就说你是傻瓜或者菜鸟，不能理解这种简单。所以没有人敢说他们设计的东西太复杂。
 
-你觉得世界上有几个人能够在B521上得A+呢？谦虚是一种美德，不要随便评判别人，然而当看到这么多大牛都那么不谦虚，耀武扬威的，很多人用他们作为评判其他人的依据，所以我只好冒着评判他们的风险，告诉你一些事实。其实Donald Knuth, Dennis Ritchie, Bjarne Stroustrup, Guido van Rossum, Brendan Eich, Linus Torvalds, Rob Pike, ... 这些很多人仰慕的大牛，如果上B521肯定是连A都拿不到的。有些甚至不能及格，因为有些人根本不知道他们在干什么，设计出一堆复杂的垃圾，然后仗着自己的威望和强权迫使你去“学习”。其实我对计算机的理解跟这些大牛们，早就不在一个数量级上了。我心里有数他们该得什么分数，你们自己猜猜吧。
+你觉得世界上有几个人能够在B521上得A+呢？谦虚是一种美德，不要随便评判别人，然而当看到这么多大牛都那么不谦虚，耀武扬威的，很多人用他们作为评判其他人的依据，所以我只好冒着评判他们的风险，告诉你一些事实。其实Donald Knuth, Dennis Ritchie, Bjarne Stroustrup, Guido van Rossum, Brendan Eich, Linus Torvalds, Rob Pike, … 这些很多人仰慕的大牛，如果上B521肯定是连A都拿不到的。有些甚至不能及格，因为有些人根本不知道他们在干什么，设计出一堆复杂的垃圾，然后仗着自己的威望和强权迫使你去“学习”。其实我对计算机的理解跟这些大牛们，早就不在一个数量级上了。我心里有数他们该得什么分数，你们自己猜猜吧。
 
 本来不想这么赤裸裸的跟人比较的，然而我发现我的话语权和我对事物的认识深度比起来，实在相差太多。当我说到一些事情的时候，经常有人抬出这些人的语录来压制，说得好像圣经似的，对我各种评判，所以觉得有必要特此说明一下。这些大牛在我心目中真的一点权威都没有的，我反而清楚他们肚子里到底有多少货，思维方式有哪些误区和局限性。
 
