--- a/blog/2013-04-02-currying.markdown
+++ b/blog/2013-04-02-currying.markdown
@@ -2,26 +2,42 @@
 
 很多基于 lambda calculus 的程序语言，比如 ML 和 Haskell，都习惯用一种叫做 currying 的手法来表示函数。比如，如果你在 Haskell 里面这样写一个函数：
 
+<div class="highlighter-rouge">
+
     f x y = x + y
+
+</div>
 
 然后你就可以这样把链表里的每个元素加上 2：
 
+<div class="highlighter-rouge">
+
     map (f 2) [1, 2, 3]
+
+</div>
 
 它会输出 `[3, 4, 5]`。
 
 注意本来 `f` 需要两个参数才能算出结果，可是这里的 `(f 2)` 只给了 `f` 一个参数。这是因为 Haskell 的函数定义的缺省方式是“currying”。Currying 其实就是用“单参数”的函数，来模拟多参数的函数。比如，上面的 `f` 的定义在 Scheme 里面相当于：
+
+<div class="highlighter-rouge">
 
     (define f
       (lambda (x)
         (lambda (y)
           (+ x y))))
 
+</div>
+
 它是说，函数 `f`，接受一个参数 `x`，返回另一个函数（没有名字）。这个匿名函数，如果再接受一个参数 `y`，就会返回 `x + y`。所以上面的例子里面，`(f 2)` 返回的是一个匿名函数，它会把 2 加到自己的参数上面返回。所以把它 map 到 `[1, 2, 3]`，我们就得到了 `[3, 4, 5]`。
 
 在这个例子里面，currying 貌似一个挺有用的东西，它让程序变得“简短”。如果不用 currying，你就需要制造另一个函数，写成这个样子：
 
+<div class="highlighter-rouge">
+
     map (\y->f 2 y) [1, 2, 3]
+
+</div>
 
 这就是为什么 Haskell 和 ML 的程序员那么喜欢 currying。这个做法其实来源于最早的 lambda calculus 的设计。因为 lambda calculus 的函数都只有一个参数，所以为了能够表示多参数的函数，有一个叫 Haskell Curry 的数学家和逻辑学家，发明了这个方法。
 
@@ -39,29 +55,53 @@
 
 然而，currying 的问题不止在于这种“认知”的方面，有时候使用 curry 会直接带来代码复杂性的增加。比如，如果你的 f 定义不是加法，而是除法：
 
+<div class="highlighter-rouge">
+
     f x y = x / y
+
+</div>
 
 然后，我们现在需要把链表 `[1, 2, 3]` 里的每一个数都除以 2。你会怎么做呢？
 
 `map (f 2) [1, 2, 3]` 肯定不行，因为 2 是除数，而不是被除数。熟悉 Haskell 的人都知道，可以这样做：
 
+<div class="highlighter-rouge">
+
     map (flip f 2) [1, 2, 3]
+
+</div>
 
 `flip` 的作用是“交换”两个参数的位置。它可以被定义为：
 
+<div class="highlighter-rouge">
+
     flip f x y = f y x
+
+</div>
 
 但是，如果 f 有 3 个参数，而我们需要把它的第 2 个参数 `map` 到一个链表，怎么办呢？比如，如果 `f` 被定义为：
 
+<div class="highlighter-rouge">
+
     f x y z = (x - y) / z
+
+</div>
 
 稍微动一下脑筋，你可能会想出这样的代码：
 
+<div class="highlighter-rouge">
+
     map (flip (f 1) 2) [1, 2, 3]
+
+</div>
 
 能想出这段代码说明你挺聪明，可是如果你这样写代码，那就是缺乏一些“智慧”。有时候，好的程序其实不在于显示你有多“聪明”，而在于显示你有多“笨”。现在我们就来看看笨一点的代码：
 
+<div class="highlighter-rouge">
+
     map (\y -> f 1 y 2) [1, 2, 3]
+
+</div>
 
 现在比较一下，你仍然觉得之前那段代码很聪明吗？如果你注意观察，就会发现 `(flip (f 1) 2)` 这个表达式，是多么的晦涩，多么的复杂。
 
@@ -71,7 +111,11 @@
 
 练习题：如果你还不相信，就请你用 currying 的方法（加上 `flip`）表达下面这个语句，也就是把 f 的第一个参数 map 到链表 `[1, 2, 3]`：
 
+<div class="highlighter-rouge">
+
     map (\y -> f y 1 2) [1, 2, 3]
+
+</div>
 
 得到结果之后再跟上面这个语句对比，看谁更加简单？
 
