Update several posts and add the new contact post.

--- a/blog/2017-01-02-elitism.markdown
+++ b/blog/2017-01-02-elitism.markdown
@@ -12,7 +12,7 @@
 
 实际上，“世界一流大学”这个名词，你只能在中国听到。在美国没有人使用这种词汇，甚至像“著名的”（prestigious）这种词都很少用。如果你进入普通的州立大学，会发现没有人在乎哈佛，耶鲁，Cornell 这些“常春藤联盟”。如果你老是提这些名字，会招致人的反感。因为这些大学的人都知道精英学校是什么东西，根本不屑于提到他们。
 
-精英大学不但以无能著称，它们比你现象的还要可怕许多。这些学校里面一般都存在一些“秘密组织”，比如 Cornell 的 [Quill and Dagger](https://en.wikipedia.org/wiki/Quill_and_Dagger)。这些组织就是精英聚集的场所。为什么要是秘密的呢？因为他们会进行一些见不得人的犯罪活动，导致成员之间互相抓住把柄，从而形成共生死的团伙。甚至有些名校的[整个学院](https://www.youtube.com/watch?v=cKy2c-itZEg&feature=youtu.be&t=1255)，都被罪犯花重金包下来，成为培养他们接班人的摇篮。所以美国的名校，其实跟娼妓没什么两样，名气越是大的越是这样。
+精英大学不但以无能著称，它们比你想象的还要可怕许多。这些学校里面一般都存在一些“秘密组织”，比如 Cornell 的 [Quill and Dagger](https://en.wikipedia.org/wiki/Quill_and_Dagger)。这些组织就是精英聚集的场所。为什么要是秘密的呢？因为他们会进行一些见不得人的犯罪活动，导致成员之间互相抓住把柄，从而形成共生死的团伙。甚至有些名校的[整个学院](https://www.youtube.com/watch?v=cKy2c-itZEg&feature=youtu.be&t=1255)，都被罪犯花重金包下来，成为培养他们接班人的摇篮。所以美国的名校，其实跟娼妓没什么两样，名气越是大的越是这样。
 
 很多进入白宫的精英，就是从这种名校秘密组织出来的，比如臭名昭著的克林顿国家安全顾问 [Sandy Berger](https://en.wikipedia.org/wiki/Sandy_Berger)，就是 Quill and Dagger 的成员。在 [9/11 恐怖袭击](http://www.yinwang.org/blog-cn/2016/12/01/september-eleven)发生之后，Sandy Berger 进入国家档案馆，偷走关于克林顿与 9/11 之间关系的资料原版，并且销毁。这种销毁证据的做法，说明克林顿跟 9/11 肯定有扯不清的关系。
 
