Update 3 posts: programming philosophy, pay and contact.

--- a/blog/2017-05-04-contact.markdown
+++ b/blog/2017-05-04-contact.markdown
@@ -2,10 +2,16 @@
 
 我有了新的 email 地址：hi@yinwang.org
 
-为什么要换 email 呢？因为我决定停止使用 Gmail。
+为什么要换 email 呢？因为我决定停止使用 Gmail。几经周折，我终于找到了一个比较满意的解决方案，可以保护隐私和安全，还可以使用我自己的域名。
 
-Google 总是号称“不作恶”（Don’t do evil），然而它其实是世界上最邪恶的公司之一。由于 Google 帮助美国情报机关监听和分析用户信息的犯罪活动，我决定从今天开始停止使用 Gmail。我也鼓励大家都停止使用 Gmail，避免 Google 得到太多的私密数据，利用数据分析来作恶。我还会逐渐停止使用 Google 的其它服务。
+为什么想停用 Gmail 呢？因为 Google 太邪恶了。总是号称“不作恶”（don’t do evil），然而它其实是世界上最邪恶的公司之一。Google 一直都在帮助美国情报机关监听和分析大量的用户信息，从事危害美国和其他国家民众利益和安全的活动。Gmail 里面包含了大量的个人隐私信息：地址，电话，日程，机票，订单，合同，文档，照片，技术讨论，个人观点，政治言论，…… 这些都落到极其险恶的美国情报机关手中，他们就可以利用这些信息来做可怕的事情。
 
-虽然在上一篇文章，我指出了人工智能不能取代人类工作，然而使用统计学方法分析大量数据，确实能产生非常大的威力。比如，分析数据的公司可以在很大程度上影响和操纵政治选举，甚至把用户数据卖给间谍机构，这是非常危险的。有[证据](https://qz.com/823922/eric-schmidt-played-a-crucial-role-in-team-hillarys-election-tech/)显示，Google 在这次选举中已经做了这样的事。由于这些原因，我对 Google 的鄙视，正式上升为敌视。
+虽然在上一篇文章，我指出了人工智能不能取代人类工作，然而使用统计学方法分析大量数据，确实能产生非常大的威力，比如向特定人群散布谣言，挑拨离间，煽动敌对情绪，影响和操纵政治选举，甚至煽动暴乱，策划暗杀和恐怖袭击，颠覆别国政权，这是非常危险的。有[证据](https://qz.com/823922/eric-schmidt-played-a-crucial-role-in-team-hillarys-election-tech/)显示，Google 在这次美国总统选举中已经做了这样的事，利用数据分析对选民进行“思维控制”，试图影响选举结果。
 
-由于习惯的力量，我们都像煮在温水里的青蛙，停止使用 Gmail 是一个艰难的过程，然而我认为离开 Gmail，阻止 Google 的监视活动，是每个人应该做的事情。还好，国内 Gmail 正常方式已经不能用了，但仍然有人以为它是好东西，想方设法翻墙用它，在美国的中国人大部分也用它。我们应该抑制住自己的这种侥幸心理，因为这最终将会祸害我们自己。
+由于这些原因，我对 Google 的鄙视，已经上升为敌视：Google 是全世界民众的敌人。我鼓励大家都停止使用 Gmail，避免 Google 得到太多的私密数据，利用数据分析来作恶。目前我已经停用 Gmail，使用 DuckDuckGo 代替 Google 搜索引擎，关掉了我的 Google+ 账号，删掉了我存在 Google Drive 的照片和文档，停用了 Chrome 浏览器，还会逐渐停止使用 Google 的其它服务。如果你仔细探索，会发现 Google 对我们的生活其实没有那么重要。
+
+由于习惯的力量，我们都像煮在温水里的青蛙。由于 Gmail 确实好用，所以停止使用 Gmail 是一个困难的过程。然而我认为离开 Gmail，阻止 Google 的邪恶活动，是每个人应该做的事情。还好，国内 Gmail 正常方式已经不能用了，但仍然有人以为它是好东西，想方设法“翻墙”用它，在美国的中国人很多也用 Gmail。我呼吁大家看清 Google 的真面目，抑制住这种懒惰的侥幸心理，因为这最终将会祸害我们自己。
+
+如果你也想摆脱 Gmail，可要小心。不要以为换成 iCloud, GMX, Fastmail 或者 Hushmail 一类就会好些。实际上服务器在美国，加拿大，德国的 email 提供商，不管他吹嘘有多么严格的保密技术，由于政府插手，很可能都有类似 Gmail 的监听问题。我建议选择服务器位于瑞士，挪威，或者其它非美国，非欧盟国家，因为美国和欧盟是腐烂的政府。具体要怎么选择，你可以参考这篇文章：http://prxbx.com/email。
+
+另外，我注意到有人注册了 Tutanota 的“加密邮件”。Tutanota 位于德国，而德国政府显然是有严重问题的，最近 Tutanota 还发表了这样的 [blog](https://tutanota.com/blog/posts/trump-family-encryption)，拿用户的隐私开玩笑，所以我不建议使用 Tutanota。我曾经推荐过 ProtonMail，然而后来我发现 ProtonMail 虽然位于瑞士，但它在主页上大肆鼓吹它的团队来自美国名校，比如 CEO 是哈佛毕业，还有很多斯坦福毕业的。哈佛和斯坦福这两个学校在政治上都是是美国政府的走狗和喉舌。另外 ProtonMail 在加密算法上也有问题，注册新用户有时生成 4096 位公钥，有时却生成 2048 位公钥，不知道怎么回事，我觉得他们的作法很不严谨。另外 ProtonMail 太新了，简直就是随着美国网络监控的曝光而产生的，所以有嫌疑是另外一个圈套。这使得我不信任 ProtonMail。
