--- a/blog/2016-04-13-pay-blog.markdown
+++ b/blog/2016-04-13-pay-blog.markdown
@@ -6,6 +6,6 @@
 
 【[PayPal付款链接](http://paypal.me/yinwang0/5)】
 
-支付宝二维码（收款人是我父亲的账号mantianxing）：
+支付宝二维码（收款人是我家人的账号 mantianxing）：
 
 ![](http://www.yinwang.org/images/alipay.jpg)
